Try again to prevent the canvas from being highlighted when touched on mobile

--- a/style/main2.css
+++ b/style/main2.css
@@ -330,6 +330,7 @@ canvas {
     -ms-user-select: none;
     /* Internet Explorer/Edge */
     user-select: none;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 #footer {
