--- a/style/truchet.css
+++ b/style/truchet.css
@@ -222,4 +222,5 @@ img.possibilities {
     -ms-user-select: none;
     /* Internet Explorer/Edge */
     user-select: none;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
